Added Kotlin code generator

--- a/example-groovy/build.gradle
+++ b/example-groovy/build.gradle
@@ -6,6 +6,7 @@ plugins {
 buildConfig {
     buildConfigField("String", "APP_NAME", "\"${project.name}\"")
     buildConfigField("String", "APP_SECRET", "\"Z3JhZGxlLWphdmEtYnVpbGRjb25maWctcGx1Z2lu\"")
-    buildConfigField("long", "BUILD_TIME", "${System.currentTimeMillis()}")
+    buildConfigField("long", "BUILD_TIME", "${System.currentTimeMillis()}L")
     buildConfigField("boolean", "FEATURE_ENABLED", "${true}")
+    buildConfigField("int[]", "MAGIC_NUMBERS", "{1, 2, 3, 4}")
 }
