--- a/example-groovy/build.gradle
+++ b/example-groovy/build.gradle
@@ -34,5 +34,5 @@ task("generateResourcesConstants") {
         }
     }
 
-    tasks["generateBuildConfig"].dependsOn(it)
+    generateBuildConfig.dependsOn(it)
 }
