--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: java
 install: true
 
 jdk:
-- oraclejdk8
+  - oraclejdk8
 
 script:
-- ./gradlew build -s
+  - ./gradlew build -s
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
@@ -13,8 +13,12 @@ after_success:
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -f  $HOME/plugin/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/plugin/.gradle/caches/*/plugin-resolution/
 
 cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+    - $HOME/plugin/.gradle/caches/
+    - $HOME/plugin/.gradle/wrapper/
