--- a/example-groovy/build.gradle
+++ b/example-groovy/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.github.gmazzo.buildconfig' version '<local>'
+    id 'com.github.gmazzo.buildconfig' version '<latest>'
 }
 
 buildConfig {
