Fixed lazy value

--- a/example-groovy/build.gradle
+++ b/example-groovy/build.gradle
@@ -7,6 +7,7 @@ buildConfig {
     packageName("com.github.gmazzo.example.groovy")
 
     buildConfigField('String', 'APP_NAME', "\"${project.name}\"")
+    buildConfigField("String", "APP_VERSION", provider { "\"${project.version}\"" })
     buildConfigField('String', 'APP_SECRET', "\"Z3JhZGxlLWphdmEtYnVpbGRjb25maWctcGx1Z2lu\"")
     buildConfigField('long', 'BUILD_TIME', "${System.currentTimeMillis()}L")
     buildConfigField('boolean', 'FEATURE_ENABLED', "${true}")
@@ -46,5 +47,12 @@ task("generateResourcesConstants") {
         }
     }
 
+    generateBuildConfig.dependsOn(it)
+}
+
+task("changeProjectVersion") {
+    doLast {
+        project.version("0.1.0-custom")
+    }
     generateBuildConfig.dependsOn(it)
 }
