Added support for nullable types

--- a/example-groovy/build.gradle
+++ b/example-groovy/build.gradle
@@ -10,6 +10,7 @@ buildConfig {
     buildConfigField("String", "APP_VERSION", provider { "\"${project.version}\"" })
     buildConfigField('String', 'APP_SECRET', "\"Z3JhZGxlLWphdmEtYnVpbGRjb25maWctcGx1Z2lu\"")
     buildConfigField('long', 'BUILD_TIME', "${System.currentTimeMillis()}L")
+    buildConfigField('String?', 'OPTIONAL', "null")
     buildConfigField('boolean', 'FEATURE_ENABLED', "${true}")
     buildConfigField('int[]', 'MAGIC_NUMBERS', '{1, 2, 3, 4}')
     buildConfigField("com.github.gmazzo.example.groovy.SomeData", "MY_DATA", "new SomeData(\"a\",1)")
