--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,57 +1,30 @@
 name: release
 on:
-  pull_request:
-    types:
-      - closed
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
-  Release:
+  build:
+    name: Build
+    uses: ./.github/workflows/build.yaml
+
+  release:
+    name: Release
+    needs: build
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == true && !startsWith(github.head_ref, 'no-release/') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.ADMIN_TOKEN }} # requires push access to master as admin
+          fetch-depth: 0
       - name: Setup JDK11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '11'
-          distribution: 'adopt'
-      - name: Setup cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.sonar/cache
-          key: ${{ runner.os }}-cache-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: ${{ runner.os }}-cache
-      - id: compute-release-type
-        name: Compute release type
-        uses: ./.github/actions/compute-release-type
-      - name: Bump version
-        id: bump-version
-        run: |
-          ./gradlew -p plugin incrementSemanticVersion --${{ steps.compute-release-type.outputs.release-type }}
-          VERSION=$(cat version.properties | grep version | cut -d'=' -f2)
-          git config user.name \"GitHub Actions\"
-          git config user.email "ci@github.com"
-          git add version.properties
-          git commit -m "Bump version $VERSION"
-          git push
-          git tag $VERSION
-          git push --tags
-          echo "::set-output name=version::$(echo $VERSION)"
-      - name: Publish plugin
+          cache: 'gradle'
+      - name: Publish
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
         run: ./gradlew -s publish
-      - name: Publish GitHub Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "!(buildSrc)/**/build/libs/**"
-          tag: ${{ steps.bump-version.outputs.version }}
-          token: ${{ secrets.ADMIN_TOKEN }} # requires push access to master as admin
