--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlinpoet = { module = "com.squareup:kotlinpoet", version = "1.10.2" }
 mockk = { module = "io.mockk:mockk", version = "1.13.5" }
 
 [plugins]
+android = { id = "com.android.application", version = "7.4.2" }
 gitVersioning = { id = "me.qoomon.git-versioning", version = "6.4.2" }
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.2.0" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
