--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
 org.gradle.jvmargs=-Xmx1g
 org.gradle.caching=true
+#org.gradle.configuration-cache=true FIXME `git-versioning` and `kotlin-multiplatform` are not compatible
