--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "1.8.22"
 
 [libraries]
-foojay = { module = "org.gradle.toolchains:foojay-resolver", version = "0.5.0" }
+foojay-jvmToolchain = { module = "org.gradle.toolchains:foojay-resolver", version = "0.5.0" }
 apache-commons-lang = { module = "org.apache.commons:commons-lang3", version = "3.12.0" }
 javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
