--- a/demo-project/groovy/build.gradle
+++ b/demo-project/groovy/build.gradle
@@ -11,15 +11,18 @@ buildConfig {
     documentation = "This is a generated BuildConfig class"
     packageName("com.github.gmazzo.buildconfig.demos.groovy")
 
-    buildConfigField('String', 'APP_NAME', "\"${project.name}\"")
-    buildConfigField("String", "APP_VERSION", provider { "\"${project.version}\"" })
+    buildConfigField(String.class, 'APP_NAME', project.name)
+    buildConfigField(String.class, "APP_VERSION", provider { project.version })
     buildConfigField('String', 'APP_SECRET', "\"Z3JhZGxlLWphdmEtYnVpbGRjb25maWctcGx1Z2lu\"")
     buildConfigField('long', 'BUILD_TIME', "${System.currentTimeMillis()}L")
-    buildConfigField('String?', 'OPTIONAL', "null")
-    buildConfigField('boolean', 'FEATURE_ENABLED', "${true}")
+    buildConfigField(String.class, 'OPTIONAL', null)
+    buildConfigField(boolean, 'FEATURE_ENABLED', true)
     buildConfigField('int[]', 'MAGIC_NUMBERS', '{1, 2, 3, 4}')
-    buildConfigField('Integer[]', 'MAGIC_NUMBERS2', '{6, 7, 8}')
+    buildConfigField('MAGIC_NUMBERS2', [1, 2, 3])
+    buildConfigField('Integer[]', 'MAGIC_NUMBERS3', '{6, 7, 8}')
+    buildConfigField('MAGIC_NUMBERS4', [9, 10] as int[])
     buildConfigField("com.github.gmazzo.buildconfig.demos.groovy.SomeData", "MY_DATA", "new SomeData(\"a\",1)")
+    buildConfigField(type("com.github.gmazzo.buildconfig.demos.groovy.SomeData"), "MY_DATA2", expression("new SomeData(\"a\",1)"))
 
     forClass('Custom') {
         useJavaOutput {
