--- a/demo-project/groovy/build.gradle
+++ b/demo-project/groovy/build.gradle
@@ -29,15 +29,15 @@ buildConfig {
     buildConfigField(String[], "STRING_ARRAY_PROVIDER", provider { ["a", "b", "c"] })
     buildConfigField(String[], "STRING_ARRAY_NULLABLE", ["a", null, "c"])
     buildConfigField(String[], "STRING_ARRAY_NULLABLE_PROVIDER", provider { ["a", null, "c"] })
-    buildConfigField(List<String>.class, "STRING_LIST", ["a", null, "c"])
-    buildConfigField(List<String>.class, "STRING_LIST_PROVIDER", provider { ["a", null, "c"] })
-    buildConfigField(Set<String>.class, "STRING_SET", ["a", null, "c"])
-    buildConfigField(Set<String>.class, "STRING_SET_PROVIDER", provider { ["a", null, "c"] })
+    buildConfigField(List<String>, "STRING_LIST", ["a", null, "c"])
+    buildConfigField(List<String>, "STRING_LIST_PROVIDER", provider { ["a", null, "c"] })
+    buildConfigField(Set<String>, "STRING_SET", ["a", null, "c"])
+    buildConfigField(Set<String>, "STRING_SET_PROVIDER", provider { ["a", null, "c"] })
 
     // all possible kind for Byte
-    buildConfigField(byte, "BYTE", (byte) 64)
+    buildConfigField(byte, "BYTE", 64 as byte)
     buildConfigField(Byte, "BYTE_NULL", null)
-    buildConfigField(byte, "BYTE_PROVIDER", provider { (byte) 64 })
+    buildConfigField(byte, "BYTE_PROVIDER", provider { 64 as byte })
     buildConfigField(byte[], "BYTE_NATIVE_ARRAY", [1, 2, 3])
     buildConfigField(byte[], "BYTE_NATIVE_ARRAY_PROVIDER", provider { [1, 2, 3] })
     buildConfigField(Byte[], "BYTE_ARRAY", [1, 2, 3])
