--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ mockk = { module = "io.mockk:mockk", version = "1.13.8" }
 
 [plugins]
 android = { id = "com.android.application", version = "8.2.0" }
+buildConfig = "com.github.gmazzo.buildconfig:5.2.0"
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.2.1" }
 jacoco-testkit = { id = "pl.droidsonroids.jacoco.testkit", version = "1.0.12" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
