--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 org.gradle.jvmargs=-Xmx2g
 org.gradle.caching=true
-org.gradle.configuration-cache=true FIXME `kotlin-multiplatform` are not compatible
+org.gradle.configuration-cache=true
