--- a/.github/actions/setup-host/action.yml
+++ b/.github/actions/setup-host/action.yml
@@ -18,3 +18,4 @@ runs:
       uses: gradle/actions/setup-gradle@v3
       with:
         cache-encryption-key: ${{ inputs.gradle-encryption-key }}
+        cache-read-only: false
