--- a/.github/actions/setup-host/action.yml
+++ b/.github/actions/setup-host/action.yml
@@ -19,3 +19,6 @@ runs:
       with:
         cache-encryption-key: ${{ inputs.gradle-encryption-key }}
         cache-read-only: false
+        build-scan-publish: true
+        build-scan-terms-of-use-url: 'https://gradle.com/terms-of-service'
+        build-scan-terms-of-use-agree: 'yes'
