--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ mockk = { module = "io.mockk:mockk", version = "1.13.17" }
 [plugins]
 android = { id = "com.android.application", version = "8.8.2" }
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.3.1" }
+jacoco-testkit = { id = "io.github.gmazzo.gradle.testkit.jacoco", version = "1.0.0" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
