--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,10 +10,13 @@ kotlinpoet = { module = "com.squareup:kotlinpoet", version = "2.1.0" }
 mockk = { module = "io.mockk:mockk", version = "1.13.17" }
 
 [plugins]
+axion-release = { id = "pl.allegro.tech.build.axion-release", version = "1.18.7" }
 android = { id = "com.android.application", version = "8.9.0" }
+dokka = { id = "org.jetbrains.dokka-javadoc", version = "2.0.0" }
 gradle-pluginPublish = { id = "com.gradle.plugin-publish", version = "1.3.1" }
 jacoco-testkit = { id = "io.github.gmazzo.gradle.testkit.jacoco", version = "1.0.2" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.31.0" }
 publicationsReport = { id = "io.github.gmazzo.publications.report", version = "1.3.1" }
